src/parser/parser.output
Terminals unused in grammar

   CHAR_CONSTANT
   FLOAT_CONSTANT
   STRING_LITERAL
   TYPEDEF
   EXTERN
   STATIC
   AUTO
   REGISTER
   CHAR
   SHORT
   LONG
   FLOAT
   DOUBLE
   SIGNED
   UNSIGNED
   STRUCT
   UNION
   ENUM
   CONST
   VOLATILE
   CASE
   DEFAULT
   SWITCH
   DO
   GOTO
   CONTINUE


Grammar

    0 $accept: ROOT $end

    1 ROOT: TRANSLATION_UNIT

    2 PRIMARY_EXPRESSION: IDENTIFIER
    3                   | CONSTANT
    4                   | LBRACKET EXPRESSION RBRACKET

    5 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
    6                   | POSTFIX_EXPRESSION LSQUARE EXPRESSION RSQUARE
    7                   | POSTFIX_EXPRESSION LBRACKET RBRACKET
    8                   | POSTFIX_EXPRESSION LBRACKET ARGUMENT_EXPRESSION_LIST RBRACKET
    9                   | POSTFIX_EXPRESSION FULLSTOP IDENTIFIER
   10                   | POSTFIX_EXPRESSION ARROW IDENTIFIER
   11                   | POSTFIX_EXPRESSION INCREMENT
   12                   | POSTFIX_EXPRESSION DECREMENT

   13 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
   14                         | ARGUMENT_EXPRESSION_LIST COMMA ASSIGNMENT_EXPRESSION

   15 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   16                 | INCREMENT UNARY_EXPRESSION
   17                 | DECREMENT UNARY_EXPRESSION
   18                 | SIZEOF UNARY_EXPRESSION
   19                 | SIZEOF LBRACKET TYPE_NAME RBRACKET
   20                 | MINUS CAST_EXPRESSION
   21                 | PLUS CAST_EXPRESSION
   22                 | EXCLAMATION CAST_EXPRESSION
   23                 | TILDE CAST_EXPRESSION

   24 CAST_EXPRESSION: UNARY_EXPRESSION
   25                | LBRACKET TYPE_NAME RBRACKET CAST_EXPRESSION

   26 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   27                          | MULTIPLICATIVE_EXPRESSION ASTERISK CAST_EXPRESSION
   28                          | MULTIPLICATIVE_EXPRESSION FRONTSLASH CAST_EXPRESSION
   29                          | MULTIPLICATIVE_EXPRESSION PERCENT CAST_EXPRESSION

   30 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   31                    | ADDITIVE_EXPRESSION PLUS MULTIPLICATIVE_EXPRESSION
   32                    | ADDITIVE_EXPRESSION MINUS MULTIPLICATIVE_EXPRESSION

   33 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   34                 | SHIFT_EXPRESSION LSHIFT ADDITIVE_EXPRESSION
   35                 | SHIFT_EXPRESSION RSHIFT ADDITIVE_EXPRESSION

   36 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   37                      | RELATIONAL_EXPRESSION LESS SHIFT_EXPRESSION
   38                      | RELATIONAL_EXPRESSION GREATER SHIFT_EXPRESSION
   39                      | RELATIONAL_EXPRESSION LESS_EQUAL SHIFT_EXPRESSION
   40                      | RELATIONAL_EXPRESSION GREATER_EQUAL SHIFT_EXPRESSION

   41 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   42                    | EQUALITY_EXPRESSION EQUAL_EQUAL RELATIONAL_EXPRESSION
   43                    | EQUALITY_EXPRESSION NOT_EQUAL RELATIONAL_EXPRESSION

   44 AND_EXPRESSION: EQUALITY_EXPRESSION
   45               | AND_EXPRESSION AMPERSAND EQUALITY_EXPRESSION

   46 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   47                        | EXCLUSIVE_OR_EXPRESSION XOR AND_EXPRESSION

   48 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   49                        | INCLUSIVE_OR_EXPRESSION OR EXCLUSIVE_OR_EXPRESSION

   50 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   51                       | LOGICAL_AND_EXPRESSION LOGICAL_AND INCLUSIVE_OR_EXPRESSION

   52 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   53                      | LOGICAL_OR_EXPRESSION LOGICAL_OR LOGICAL_AND_EXPRESSION

   54 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   55                       | LOGICAL_OR_EXPRESSION QUESTION EXPRESSION COLON CONDITIONAL_EXPRESSION

   56 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   57                      | UNARY_EXPRESSION EQUALS ASSIGNMENT_EXPRESSION
   58                      | UNARY_EXPRESSION EQUALS_MUL ASSIGNMENT_EXPRESSION
   59                      | UNARY_EXPRESSION EQUALS_DIV ASSIGNMENT_EXPRESSION
   60                      | UNARY_EXPRESSION EQUALS_MOD ASSIGNMENT_EXPRESSION
   61                      | UNARY_EXPRESSION EQUALS_ADD ASSIGNMENT_EXPRESSION
   62                      | UNARY_EXPRESSION EQUALS_SUB ASSIGNMENT_EXPRESSION
   63                      | UNARY_EXPRESSION EQUALS_LSHIFT ASSIGNMENT_EXPRESSION
   64                      | UNARY_EXPRESSION EQUALS_RSHIFT ASSIGNMENT_EXPRESSION
   65                      | UNARY_EXPRESSION EQUALS_AND ASSIGNMENT_EXPRESSION
   66                      | UNARY_EXPRESSION EQUALS_XOR ASSIGNMENT_EXPRESSION
   67                      | UNARY_EXPRESSION EQUALS_OR ASSIGNMENT_EXPRESSION

   68 EXPRESSION: ASSIGNMENT_EXPRESSION
   69           | EXPRESSION COMMA ASSIGNMENT_EXPRESSION

   70 CONSTANT_EXPRESSION: CONDITIONAL_EXPRESSION

   71 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST SEMICOLON
   72            | DECLARATION_SPECIFIERS SEMICOLON

   73 DECLARATION_SPECIFIERS: TYPE_SPECIFIER
   74                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS

   75 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   76                     | INIT_DECLARATOR_LIST COMMA INIT_DECLARATOR

   77 INIT_DECLARATOR: DECLARATOR
   78                | DECLARATOR EQUALS INITIALIZER

   79 TYPE_SPECIFIER: INT
   80               | VOID

   81 SPECIFIER_QUALIFIER_LIST: TYPE_SPECIFIER

   82 DECLARATOR: DIRECT_DECLARATOR

   83 DIRECT_DECLARATOR: IDENTIFIER
   84                  | DIRECT_DECLARATOR LSQUARE CONSTANT_EXPRESSION RSQUARE
   85                  | DIRECT_DECLARATOR LBRACKET PARAMETER_TYPE_LIST RBRACKET
   86                  | DIRECT_DECLARATOR LBRACKET RBRACKET
   87                  | DIRECT_DECLARATOR LBRACKET IDENTIFIER_LIST RBRACKET

   88 PARAMETER_TYPE_LIST: PARAMETER_LIST
   89                    | PARAMETER_LIST COMMA ELLIPSIS

   90 PARAMETER_LIST: PARAMETER_DECLARATION
   91               | PARAMETER_LIST COMMA PARAMETER_DECLARATION

   92 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR

   93 IDENTIFIER_LIST: IDENTIFIER
   94                | IDENTIFIER_LIST COMMA IDENTIFIER

   95 TYPE_NAME: SPECIFIER_QUALIFIER_LIST

   96 INITIALIZER: ASSIGNMENT_EXPRESSION

   97 STATEMENT: COMPOUND_STATEMENT
   98          | EXPRESSION_STATEMENT
   99          | SELECTION_STATEMENT
  100          | ITERATION_STATEMENT
  101          | JUMP_STATEMENT

  102 COMPOUND_STATEMENT: LCURLY RCURLY
  103                   | LCURLY DECLARATION_LIST RCURLY
  104                   | LCURLY STATEMENT_LIST RCURLY
  105                   | LCURLY DECLARATION_LIST STATEMENT_LIST RCURLY

  106 DECLARATION_LIST: DECLARATION
  107                 | DECLARATION_LIST DECLARATION

  108 STATEMENT_LIST: STATEMENT
  109               | STATEMENT_LIST STATEMENT

  110 EXPRESSION_STATEMENT: SEMICOLON
  111                     | EXPRESSION SEMICOLON

  112 SELECTION_STATEMENT: IF LBRACKET EXPRESSION RBRACKET STATEMENT
  113                    | IF LBRACKET EXPRESSION RBRACKET STATEMENT ELSE STATEMENT

  114 ITERATION_STATEMENT: WHILE LBRACKET EXPRESSION RBRACKET STATEMENT
  115                    | FOR LBRACKET SEMICOLON SEMICOLON RBRACKET STATEMENT
  116                    | FOR LBRACKET EXPRESSION SEMICOLON SEMICOLON RBRACKET STATEMENT
  117                    | FOR LBRACKET SEMICOLON EXPRESSION SEMICOLON RBRACKET STATEMENT
  118                    | FOR LBRACKET SEMICOLON SEMICOLON EXPRESSION RBRACKET STATEMENT
  119                    | FOR LBRACKET EXPRESSION SEMICOLON EXPRESSION SEMICOLON RBRACKET STATEMENT
  120                    | FOR LBRACKET SEMICOLON EXPRESSION SEMICOLON EXPRESSION RBRACKET STATEMENT
  121                    | FOR LBRACKET EXPRESSION SEMICOLON SEMICOLON EXPRESSION RBRACKET STATEMENT
  122                    | FOR LBRACKET EXPRESSION SEMICOLON EXPRESSION SEMICOLON EXPRESSION RBRACKET STATEMENT

  123 JUMP_STATEMENT: RETURN SEMICOLON
  124               | RETURN EXPRESSION SEMICOLON
  125               | BREAK SEMICOLON

  126 TRANSLATION_UNIT: EXTERNAL_DECLARATION
  127                 | EXTERNAL_DECLARATION TRANSLATION_UNIT

  128 EXTERNAL_DECLARATION: DECLARATION
  129                     | FUNCTION_DEFINITION

  130 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR COMPOUND_STATEMENT
  131                    | DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  132                    | DECLARATOR COMPOUND_STATEMENT
  133                    | DECLARATION_SPECIFIERS DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT

  134 CONSTANT: INT_CONSTANT


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_CONSTANT (258) 134
CHAR_CONSTANT (259)
FLOAT_CONSTANT (260)
IDENTIFIER (261) 2 9 10 83 93 94
STRING_LITERAL (262)
SEMICOLON (263) 71 72 110 111 115 116 117 118 119 120 121 122 123 124
    125
LBRACKET (264) 4 7 8 19 25 85 86 87 112 113 114 115 116 117 118 119
    120 121 122
RBRACKET (265) 4 7 8 19 25 85 86 87 112 113 114 115 116 117 118 119
    120 121 122
LCURLY (266) 102 103 104 105
RCURLY (267) 102 103 104 105
COMMA (268) 14 69 76 89 91 94
TILDE (269) 23
EQUALS (270) 57 78
LSQUARE (271) 6 84
RSQUARE (272) 6 84
FULLSTOP (273) 9
ARROW (274) 10
INCREMENT (275) 11 16
DECREMENT (276) 12 17
SIZEOF (277) 18 19
AMPERSAND (278) 45
ASTERISK (279) 27
PLUS (280) 21 31
MINUS (281) 20 32
EXCLAMATION (282) 22
FRONTSLASH (283) 28
LSHIFT (284) 34
RSHIFT (285) 35
PERCENT (286) 29
LESS (287) 37
GREATER (288) 38
LESS_EQUAL (289) 39
GREATER_EQUAL (290) 40
EQUAL_EQUAL (291) 42
NOT_EQUAL (292) 43
XOR (293) 47
OR (294) 49
LOGICAL_AND (295) 51
LOGICAL_OR (296) 53
QUESTION (297) 55
COLON (298) 55
EQUALS_MUL (299) 58
EQUALS_DIV (300) 59
EQUALS_MOD (301) 60
EQUALS_ADD (302) 61
EQUALS_SUB (303) 62
EQUALS_LSHIFT (304) 63
EQUALS_RSHIFT (305) 64
EQUALS_AND (306) 65
EQUALS_XOR (307) 66
EQUALS_OR (308) 67
TYPEDEF (309)
EXTERN (310)
STATIC (311)
AUTO (312)
REGISTER (313)
VOID (314) 80
CHAR (315)
SHORT (316)
INT (317) 79
LONG (318)
FLOAT (319)
DOUBLE (320)
SIGNED (321)
UNSIGNED (322)
STRUCT (323)
UNION (324)
ENUM (325)
CONST (326)
VOLATILE (327)
ELLIPSIS (328) 89
CASE (329)
DEFAULT (330)
IF (331) 112 113
ELSE (332) 113
SWITCH (333)
WHILE (334) 114
DO (335)
FOR (336) 115 116 117 118 119 120 121 122
GOTO (337)
CONTINUE (338)
BREAK (339) 125
RETURN (340) 123 124
"then" (341)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
ROOT (88)
    on left: 1, on right: 0
PRIMARY_EXPRESSION (89)
    on left: 2 3 4, on right: 5
POSTFIX_EXPRESSION (90)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
ARGUMENT_EXPRESSION_LIST (91)
    on left: 13 14, on right: 8 14
UNARY_EXPRESSION (92)
    on left: 15 16 17 18 19 20 21 22 23, on right: 16 17 18 24 57 58
    59 60 61 62 63 64 65 66 67
CAST_EXPRESSION (93)
    on left: 24 25, on right: 20 21 22 23 25 26 27 28 29
MULTIPLICATIVE_EXPRESSION (94)
    on left: 26 27 28 29, on right: 27 28 29 30 31 32
ADDITIVE_EXPRESSION (95)
    on left: 30 31 32, on right: 31 32 33 34 35
SHIFT_EXPRESSION (96)
    on left: 33 34 35, on right: 34 35 36 37 38 39 40
RELATIONAL_EXPRESSION (97)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
EQUALITY_EXPRESSION (98)
    on left: 41 42 43, on right: 42 43 44 45
AND_EXPRESSION (99)
    on left: 44 45, on right: 45 46 47
EXCLUSIVE_OR_EXPRESSION (100)
    on left: 46 47, on right: 47 48 49
INCLUSIVE_OR_EXPRESSION (101)
    on left: 48 49, on right: 49 50 51
LOGICAL_AND_EXPRESSION (102)
    on left: 50 51, on right: 51 52 53
LOGICAL_OR_EXPRESSION (103)
    on left: 52 53, on right: 53 54 55
CONDITIONAL_EXPRESSION (104)
    on left: 54 55, on right: 55 56 70
ASSIGNMENT_EXPRESSION (105)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67, on right: 13 14 57
    58 59 60 61 62 63 64 65 66 67 68 69 96
EXPRESSION (106)
    on left: 68 69, on right: 4 6 55 69 111 112 113 114 116 117 118
    119 120 121 122 124
CONSTANT_EXPRESSION (107)
    on left: 70, on right: 84
DECLARATION (108)
    on left: 71 72, on right: 106 107 128
DECLARATION_SPECIFIERS (109)
    on left: 73 74, on right: 71 72 74 92 130 133
INIT_DECLARATOR_LIST (110)
    on left: 75 76, on right: 71 76
INIT_DECLARATOR (111)
    on left: 77 78, on right: 75 76
TYPE_SPECIFIER (112)
    on left: 79 80, on right: 73 74 81
SPECIFIER_QUALIFIER_LIST (113)
    on left: 81, on right: 95
DECLARATOR (114)
    on left: 82, on right: 77 78 92 130 131 132 133
DIRECT_DECLARATOR (115)
    on left: 83 84 85 86 87, on right: 82 84 85 86 87
PARAMETER_TYPE_LIST (116)
    on left: 88 89, on right: 85
PARAMETER_LIST (117)
    on left: 90 91, on right: 88 89 91
PARAMETER_DECLARATION (118)
    on left: 92, on right: 90 91
IDENTIFIER_LIST (119)
    on left: 93 94, on right: 87 94
TYPE_NAME (120)
    on left: 95, on right: 19 25
INITIALIZER (121)
    on left: 96, on right: 78
STATEMENT (122)
    on left: 97 98 99 100 101, on right: 108 109 112 113 114 115 116
    117 118 119 120 121 122
COMPOUND_STATEMENT (123)
    on left: 102 103 104 105, on right: 97 130 131 132 133
DECLARATION_LIST (124)
    on left: 106 107, on right: 103 105 107 131 133
STATEMENT_LIST (125)
    on left: 108 109, on right: 104 105 109
EXPRESSION_STATEMENT (126)
    on left: 110 111, on right: 98
SELECTION_STATEMENT (127)
    on left: 112 113, on right: 99
ITERATION_STATEMENT (128)
    on left: 114 115 116 117 118 119 120 121 122, on right: 100
JUMP_STATEMENT (129)
    on left: 123 124 125, on right: 101
TRANSLATION_UNIT (130)
    on left: 126 127, on right: 1 127
EXTERNAL_DECLARATION (131)
    on left: 128 129, on right: 126 127
FUNCTION_DEFINITION (132)
    on left: 130 131 132 133, on right: 129
CONSTANT (133)
    on left: 134, on right: 3


State 0

    0 $accept: . ROOT $end

    IDENTIFIER  shift, and go to state 1
    VOID        shift, and go to state 2
    INT         shift, and go to state 3

    ROOT                    go to state 4
    DECLARATION             go to state 5
    DECLARATION_SPECIFIERS  go to state 6
    TYPE_SPECIFIER          go to state 7
    DECLARATOR              go to state 8
    DIRECT_DECLARATOR       go to state 9
    TRANSLATION_UNIT        go to state 10
    EXTERNAL_DECLARATION    go to state 11
    FUNCTION_DEFINITION     go to state 12


State 1

   83 DIRECT_DECLARATOR: IDENTIFIER .

    $default  reduce using rule 83 (DIRECT_DECLARATOR)


State 2

   80 TYPE_SPECIFIER: VOID .

    $default  reduce using rule 80 (TYPE_SPECIFIER)


State 3

   79 TYPE_SPECIFIER: INT .

    $default  reduce using rule 79 (TYPE_SPECIFIER)


State 4

    0 $accept: ROOT . $end

    $end  shift, and go to state 13


State 5

  128 EXTERNAL_DECLARATION: DECLARATION .

    $default  reduce using rule 128 (EXTERNAL_DECLARATION)


State 6

   71 DECLARATION: DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST SEMICOLON
   72            | DECLARATION_SPECIFIERS . SEMICOLON
  130 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS . DECLARATOR COMPOUND_STATEMENT
  133                    | DECLARATION_SPECIFIERS . DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT

    IDENTIFIER  shift, and go to state 1
    SEMICOLON   shift, and go to state 14

    INIT_DECLARATOR_LIST  go to state 15
    INIT_DECLARATOR       go to state 16
    DECLARATOR            go to state 17
    DIRECT_DECLARATOR     go to state 9


State 7

   73 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .
   74                       | TYPE_SPECIFIER . DECLARATION_SPECIFIERS

    VOID  shift, and go to state 2
    INT   shift, and go to state 3

    $default  reduce using rule 73 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS  go to state 18
    TYPE_SPECIFIER          go to state 7


State 8

  131 FUNCTION_DEFINITION: DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT
  132                    | DECLARATOR . COMPOUND_STATEMENT

    LCURLY  shift, and go to state 19
    VOID    shift, and go to state 2
    INT     shift, and go to state 3

    DECLARATION             go to state 20
    DECLARATION_SPECIFIERS  go to state 21
    TYPE_SPECIFIER          go to state 7
    COMPOUND_STATEMENT      go to state 22
    DECLARATION_LIST        go to state 23


State 9

   82 DECLARATOR: DIRECT_DECLARATOR .
   84 DIRECT_DECLARATOR: DIRECT_DECLARATOR . LSQUARE CONSTANT_EXPRESSION RSQUARE
   85                  | DIRECT_DECLARATOR . LBRACKET PARAMETER_TYPE_LIST RBRACKET
   86                  | DIRECT_DECLARATOR . LBRACKET RBRACKET
   87                  | DIRECT_DECLARATOR . LBRACKET IDENTIFIER_LIST RBRACKET

    LBRACKET  shift, and go to state 24
    LSQUARE   shift, and go to state 25

    $default  reduce using rule 82 (DECLARATOR)


State 10

    1 ROOT: TRANSLATION_UNIT .

    $default  reduce using rule 1 (ROOT)


State 11

  126 TRANSLATION_UNIT: EXTERNAL_DECLARATION .
  127                 | EXTERNAL_DECLARATION . TRANSLATION_UNIT

    IDENTIFIER  shift, and go to state 1
    VOID        shift, and go to state 2
    INT         shift, and go to state 3

    $default  reduce using rule 126 (TRANSLATION_UNIT)

    DECLARATION             go to state 5
    DECLARATION_SPECIFIERS  go to state 6
    TYPE_SPECIFIER          go to state 7
    DECLARATOR              go to state 8
    DIRECT_DECLARATOR       go to state 9
    TRANSLATION_UNIT        go to state 26
    EXTERNAL_DECLARATION    go to state 11
    FUNCTION_DEFINITION     go to state 12


State 12

  129 EXTERNAL_DECLARATION: FUNCTION_DEFINITION .

    $default  reduce using rule 129 (EXTERNAL_DECLARATION)


State 13

    0 $accept: ROOT $end .

    $default  accept


State 14

   72 DECLARATION: DECLARATION_SPECIFIERS SEMICOLON .

    $default  reduce using rule 72 (DECLARATION)


State 15

   71 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST . SEMICOLON
   76 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST . COMMA INIT_DECLARATOR

    SEMICOLON  shift, and go to state 27
    COMMA      shift, and go to state 28


State 16

   75 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 75 (INIT_DECLARATOR_LIST)


State 17

   77 INIT_DECLARATOR: DECLARATOR .
   78                | DECLARATOR . EQUALS INITIALIZER
  130 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR . COMPOUND_STATEMENT
  133                    | DECLARATION_SPECIFIERS DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT

    LCURLY  shift, and go to state 19
    EQUALS  shift, and go to state 29
    VOID    shift, and go to state 2
    INT     shift, and go to state 3

    $default  reduce using rule 77 (INIT_DECLARATOR)

    DECLARATION             go to state 20
    DECLARATION_SPECIFIERS  go to state 21
    TYPE_SPECIFIER          go to state 7
    COMPOUND_STATEMENT      go to state 30
    DECLARATION_LIST        go to state 31


State 18

   74 DECLARATION_SPECIFIERS: TYPE_SPECIFIER DECLARATION_SPECIFIERS .

    $default  reduce using rule 74 (DECLARATION_SPECIFIERS)


State 19

  102 COMPOUND_STATEMENT: LCURLY . RCURLY
  103                   | LCURLY . DECLARATION_LIST RCURLY
  104                   | LCURLY . STATEMENT_LIST RCURLY
  105                   | LCURLY . DECLARATION_LIST STATEMENT_LIST RCURLY

    INT_CONSTANT  shift, and go to state 32
    IDENTIFIER    shift, and go to state 33
    SEMICOLON     shift, and go to state 34
    LBRACKET      shift, and go to state 35
    LCURLY        shift, and go to state 19
    RCURLY        shift, and go to state 36
    TILDE         shift, and go to state 37
    INCREMENT     shift, and go to state 38
    DECREMENT     shift, and go to state 39
    SIZEOF        shift, and go to state 40
    PLUS          shift, and go to state 41
    MINUS         shift, and go to state 42
    EXCLAMATION   shift, and go to state 43
    VOID          shift, and go to state 2
    INT           shift, and go to state 3
    IF            shift, and go to state 44
    WHILE         shift, and go to state 45
    FOR           shift, and go to state 46
    BREAK         shift, and go to state 47
    RETURN        shift, and go to state 48

    PRIMARY_EXPRESSION         go to state 49
    POSTFIX_EXPRESSION         go to state 50
    UNARY_EXPRESSION           go to state 51
    CAST_EXPRESSION            go to state 52
    MULTIPLICATIVE_EXPRESSION  go to state 53
    ADDITIVE_EXPRESSION        go to state 54
    SHIFT_EXPRESSION           go to state 55
    RELATIONAL_EXPRESSION      go to state 56
    EQUALITY_EXPRESSION        go to state 57
    AND_EXPRESSION             go to state 58
    EXCLUSIVE_OR_EXPRESSION    go to state 59
    INCLUSIVE_OR_EXPRESSION    go to state 60
    LOGICAL_AND_EXPRESSION     go to state 61
    LOGICAL_OR_EXPRESSION      go to state 62
    CONDITIONAL_EXPRESSION     go to state 63
    ASSIGNMENT_EXPRESSION      go to state 64
    EXPRESSION                 go to state 65
    DECLARATION                go to state 20
    DECLARATION_SPECIFIERS     go to state 21
    TYPE_SPECIFIER             go to state 7
    STATEMENT                  go to state 66
    COMPOUND_STATEMENT         go to state 67
    DECLARATION_LIST           go to state 68
    STATEMENT_LIST             go to state 69
    EXPRESSION_STATEMENT       go to state 70
    SELECTION_STATEMENT        go to state 71
    ITERATION_STATEMENT        go to state 72
    JUMP_STATEMENT             go to state 73
    CONSTANT                   go to state 74


State 20

  106 DECLARATION_LIST: DECLARATION .

    $default  reduce using rule 106 (DECLARATION_LIST)


State 21

   71 DECLARATION: DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST SEMICOLON
   72            | DECLARATION_SPECIFIERS . SEMICOLON

    IDENTIFIER  shift, and go to state 1
    SEMICOLON   shift, and go to state 14

    INIT_DECLARATOR_LIST  go to state 15
    INIT_DECLARATOR       go to state 16
    DECLARATOR            go to state 75
    DIRECT_DECLARATOR     go to state 9


State 22

  132 FUNCTION_DEFINITION: DECLARATOR COMPOUND_STATEMENT .

    $default  reduce using rule 132 (FUNCTION_DEFINITION)


State 23

  107 DECLARATION_LIST: DECLARATION_LIST . DECLARATION
  131 FUNCTION_DEFINITION: DECLARATOR DECLARATION_LIST . COMPOUND_STATEMENT

    LCURLY  shift, and go to state 19
    VOID    shift, and go to state 2
    INT     shift, and go to state 3

    DECLARATION             go to state 76
    DECLARATION_SPECIFIERS  go to state 21
    TYPE_SPECIFIER          go to state 7
    COMPOUND_STATEMENT      go to state 77


State 24

   85 DIRECT_DECLARATOR: DIRECT_DECLARATOR LBRACKET . PARAMETER_TYPE_LIST RBRACKET
   86                  | DIRECT_DECLARATOR LBRACKET . RBRACKET
   87                  | DIRECT_DECLARATOR LBRACKET . IDENTIFIER_LIST RBRACKET

    IDENTIFIER  shift, and go to state 78
    RBRACKET    shift, and go to state 79
    VOID        shift, and go to state 2
    INT         shift, and go to state 3

    DECLARATION_SPECIFIERS  go to state 80
    TYPE_SPECIFIER          go to state 7
    PARAMETER_TYPE_LIST     go to state 81
    PARAMETER_LIST          go to state 82
    PARAMETER_DECLARATION   go to state 83
    IDENTIFIER_LIST         go to state 84


State 25

   84 DIRECT_DECLARATOR: DIRECT_DECLARATOR LSQUARE . CONSTANT_EXPRESSION RSQUARE

    INT_CONSTANT  shift, and go to state 32
    IDENTIFIER    shift, and go to state 33
    LBRACKET      shift, and go to state 35
    TILDE         shift, and go to state 37
    INCREMENT     shift, and go to state 38
    DECREMENT     shift, and go to state 39
    SIZEOF        shift, and go to state 40
    PLUS          shift, and go to state 41
    MINUS         shift, and go to state 42
    EXCLAMATION   shift, and go to state 43

    PRIMARY_EXPRESSION         go to state 49
    POSTFIX_EXPRESSION         go to state 50
    UNARY_EXPRESSION           go to state 85
    CAST_EXPRESSION            go to state 52
    MULTIPLICATIVE_EXPRESSION  go to state 53
    ADDITIVE_EXPRESSION        go to state 54
    SHIFT_EXPRESSION           go to state 55
    RELATIONAL_EXPRESSION      go to state 56
    EQUALITY_EXPRESSION        go to state 57
    AND_EXPRESSION             go to state 58
    EXCLUSIVE_OR_EXPRESSION    go to state 59
    INCLUSIVE_OR_EXPRESSION    go to state 60
    LOGICAL_AND_EXPRESSION     go to state 61
    LOGICAL_OR_EXPRESSION      go to state 62
    CONDITIONAL_EXPRESSION     go to state 86
    CONSTANT_EXPRESSION        go to state 87
    CONSTANT                   go to state 74


State 26

  127 TRANSLATION_UNIT: EXTERNAL_DECLARATION TRANSLATION_UNIT .

    $default  reduce using rule 127 (TRANSLATION_UNIT)


State 27

   71 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST SEMICOLON .

    $default  reduce using rule 71 (DECLARATION)


State 28

   76 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST COMMA . INIT_DECLARATOR

    IDENTIFIER  shift, and go to state 1

    INIT_DECLARATOR    go to state 88
    DECLARATOR         go to state 75
    DIRECT_DECLARATOR  go to state 9


State 29

   78 INIT_DECLARATOR: DECLARATOR EQUALS . INITIALIZER

    INT_CONSTANT  shift, and go to state 32
    IDENTIFIER    shift, and go to state 33
    LBRACKET      shift, and go to state 35
    TILDE         shift, and go to state 37
    INCREMENT     shift, and go to state 38
    DECREMENT     shift, and go to state 39
    SIZEOF        shift, and go to state 40
    PLUS          shift, and go to state 41
    MINUS         shift, and go to state 42
    EXCLAMATION   shift, and go to state 43

    PRIMARY_EXPRESSION         go to state 49
    POSTFIX_EXPRESSION         go to state 50
    UNARY_EXPRESSION           go to state 51
    CAST_EXPRESSION            go to state 52
    MULTIPLICATIVE_EXPRESSION  go to state 53
    ADDITIVE_EXPRESSION        go to state 54
    SHIFT_EXPRESSION           go to state 55
    RELATIONAL_EXPRESSION      go to state 56
    EQUALITY_EXPRESSION        go to state 57
    AND_EXPRESSION             go to state 58
    EXCLUSIVE_OR_EXPRESSION    go to state 59
    INCLUSIVE_OR_EXPRESSION    go to state 60
    LOGICAL_AND_EXPRESSION     go to state 61
    LOGICAL_OR_EXPRESSION      go to state 62
    CONDITIONAL_EXPRESSION     go to state 63
    ASSIGNMENT_EXPRESSION      go to state 89
    INITIALIZER                go to state 90
    CONSTANT                   go to state 74


State 30

  130 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR COMPOUND_STATEMENT .

    $default  reduce using rule 130 (FUNCTION_DEFINITION)


State 31

  107 DECLARATION_LIST: DECLARATION_LIST . DECLARATION
  133 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR DECLARATION_LIST . COMPOUND_STATEMENT

    LCURLY  shift, and go to state 19
    VOID    shift, and go to state 2
    INT     shift, and go to state 3

    DECLARATION             go to state 76
    DECLARATION_SPECIFIERS  go to state 21
    TYPE_SPECIFIER          go to state 7
    COMPOUND_STATEMENT      go to state 91


State 32

  134 CONSTANT: INT_CONSTANT .

    $default  reduce using rule 134 (CONSTANT)


State 33

    2 PRIMARY_EXPRESSION: IDENTIFIER .

    $default  reduce using rule 2 (PRIMARY_EXPRESSION)


State 34

  110 EXPRESSION_STATEMENT: SEMICOLON .

    $default  reduce using rule 110 (EXPRESSION_STATEMENT)


State 35

    4 PRIMARY_EXPRESSION: LBRACKET . EXPRESSION RBRACKET
   25 CAST_EXPRESSION: LBRACKET . TYPE_NAME RBRACKET CAST_EXPRESSION

    INT_CONSTANT  shift, and go to state 32
    IDENTIFIER    shift, and go to state 33
    LBRACKET      shift, and go to state 35
    TILDE         shift, and go to state 37
    INCREMENT     shift, and go to state 38
    DECREMENT     shift, and go to state 39
    SIZEOF        shift, and go to state 40
    PLUS          shift, and go to state 41
    MINUS         shift, and go to state 42
    EXCLAMATION   shift, and go to state 43
    VOID          shift, and go to state 2
    INT           shift, and go to state 3
